# game-mcp-poc

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: routes.rs
backend/src/db/: repository.rs  schema.rs
backend/src/game/: board.rs  logic.rs  manager.rs  mod.rs  player.rs
backend/src/mcp/: protocol.rs  server.rs  tools.rs
backend/tests/: mcp_integration.rs
docs/: architecture.md  design.md  initial-agent-instructions.md  mcp-implementation-roadmap.md  mcp-setup-and-testing.md  mermaid-contrast.md  online-plan.md  plan.md  prd.md  process.md  project-analysis.md  resume-gemini.md  status.md
examples/: README.md  claude-desktop-config.json  gemini_agent.py  openai_agent.py
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: lib.rs
frontend/src/api/: client.rs  mod.rs
scripts/: README.md  build.sh  dev.sh  generate-build-info.sh  play_with_agent.sh
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
wiki/: Architecture-Overview.md  Backend-Architecture.md  Data-Flow.md  Development-Process.md  Frontend-Architecture.md  Home.md  MCP-Integration.md  README.md  _Sidebar.md
