[workspace]
resolver = "2"
members = ["backend", "frontend", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Game MCP POC Team"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Backend dependencies
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Frontend dependencies
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo = "0.11"
gloo-net = "0.5"
console_log = "1.0"
log = "0.4"

# Testing dependencies
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-test = "0.3"
