[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
reqwest.workspace = true
